- modify the tag.
- remove unsued files

Signed-off-by: hungweic <hungweic@synology.com>

--- a/source/_posts/2013-04-01-1741.md
+++ b/source/_posts/2013-04-01-1741.md
@@ -4,6 +4,10 @@ title: 'Linux-Kernel-PacketCapture'
 date: 2013-04-01 13:30
 comments: true
 categories: [System, C, Network]
+tags:
+	- System
+	- C
+	- Network
 ---
 
 最近突然對抓封包挺有興趣的，正好以前修網際網路規約時，有trace過linux中TCP/IP相關的code
