--- a/source/_posts/2013-04-22-split.md
+++ b/source/_posts/2013-04-22-split.md
@@ -4,6 +4,8 @@ title: 'Python -- split()'
 date: 2013-04-22 00:47
 comments: true
 categories: [Python]
+tags:
+	- Python
 ---
 
 在python中也可以利用split的方式把字串按照特定的字元切開
