--- a/source/_posts/2013-06-04-irc-robot.md
+++ b/source/_posts/2013-06-04-irc-robot.md
@@ -4,6 +4,8 @@ title: 'Python-Robot(1) IRC'
 date: 2013-06-04 16:00
 comments: true
 categories: [Python]
+tags:
+	- Python
 ---
 
 要撰寫IRC 機器人其實不難，網路上到處都有範例，其實就是簡單的NP，字串來回處理而以。
