--- a/source/_posts/2013-06-10-1761.md
+++ b/source/_posts/2013-06-10-1761.md
@@ -4,6 +4,10 @@ title: 'FloodLight--Module'
 date: 2013-06-10 16:56
 comments: true
 categories: [Openflow, java]
+tags:
+	- SDN
+	- Floodlight
+	- Java
 ---
 
 Floodlight把module分成core跟application兩個方向為主  
