--- a/source/_posts/2013-10-05-cscope.md
+++ b/source/_posts/2013-10-05-cscope.md
@@ -4,6 +4,8 @@ title: 'cscope'
 date: 2013-10-05 09:25
 comments: true
 categories: [System]
+tags:
+	- System
 ---
 ###Introducion###
 Cscope 是一個用來trace code還滿方便的工具
