--- a/source/_posts/2013-10-11-vim.md
+++ b/source/_posts/2013-10-11-vim.md
@@ -3,7 +3,10 @@ layout: post
 title: 'Vim & Nerdtree'
 date: 2013-10-11 07:48
 comments: true
-categories: [System, Vim]
+ategories: [System, Vim]
+tags:
+	- vim
+	- System
 ---
 最近重新整理vim的設定檔，意外的發現
 [http://yoursachet.com/](http://yoursachet.com/)
