--- a/source/_posts/2013-10-12-pure-ftpd.md
+++ b/source/_posts/2013-10-12-pure-ftpd.md
@@ -4,6 +4,9 @@ title: 'Pure-ftpd '
 date: 2013-10-12 09:03
 comments: true
 categories: [System, FTP]
+tags:
+	- System
+	- FTP
 ---
 
 在`Windows`上安裝Ftp-server時，通常都是選擇[Filezilla](https://filezilla-project.org/)這套軟體來使用。
