--- a/source/_posts/2013-10-12-zfs-notes.md
+++ b/source/_posts/2013-10-12-zfs-notes.md
@@ -4,6 +4,10 @@ title: 'ZFS 筆記'
 date: 2013-10-12 17:53
 comments: true
 categories: [System, ZFS]
+tags:
+	- FreeBSD
+	- System
+	- ZFS
 ---
 之前機器因為ZFS空間滿了，因為平常有再作snapshot的緣故，導致東西都刪除不了
 因為刪除的時候都會有一些metadata的寫入，導致整個zfs動彈不得，這時候就花了很多時間再研就怎麼處理
