--- a/source/_posts/2014-01-10-175268.md
+++ b/source/_posts/2014-01-10-175268.md
@@ -4,6 +4,8 @@ title: '2014 運動記錄'
 date: 2014-01-10 14:39
 comments: true
 categories: 
+tags:
+	- Life
 ---
 ##2014##
 -	游泳
@@ -26,9 +28,9 @@ categories:
   -	5/18	2000m
   -	5/20	1500m
 - 跑步
-	-	3/3		2000m
-	-	3/5		2000m
-  - 3/11  1200m
+  -	3/3		2000m
+  -	3/5		2000m
+  - 3/11    1200m
   -	3/15	2000m
   -	3/16	2000m
   -	3/19	2000m
