--- a/source/_posts/2014-07-26-mpd5-on-freebsd-100.md
+++ b/source/_posts/2014-07-26-mpd5-on-freebsd-100.md
@@ -4,6 +4,11 @@ title: 'mpd5 on FreeBSD 10.0'
 date: 2014-07-26 14:29
 comments: true
 categories: [freebsd, VPN]
+tags:
+	- VPN
+	- FreeBSD
+	- Network
+	- System
 ---
 Goal
 ----
