--- a/source/_posts/2014-10-25-bluez-5x.md
+++ b/source/_posts/2014-10-25-bluez-5x.md
@@ -4,6 +4,10 @@ title: 'Bluez 5.x '
 date: 2014-10-25 13:02
 comments: true
 categories: 
+tags:
+	- System
+	- Bluetooth
+	- Linux
 ---
 Introduction
 ------------
