--- a/source/_posts/2016-03-20-663533.md
+++ b/source/_posts/2016-03-20-663533.md
@@ -4,6 +4,10 @@ title: 'NFQUEUE drop UDP packets'
 date: 2016-03-20 15:32
 comments: true
 categories: 
+tags:
+	- Network
+	- Netfilter
+	- NFQUEUE
 ---
 ##Introduction
 此篇文章用來記錄最近遇到的一個問題，在一個執行 NFQUEUE 的系統上，當一個尚未被 conntrack 紀錄的連續 UDP 封包經過系統且都經過 NFQUEUE 處理後，第二個 UDP 封包都會遺失的問題。
