--- a/source/_posts/2016-08-31-825029.md
+++ b/source/_posts/2016-08-31-825029.md
@@ -3,7 +3,11 @@ layout: post
 title: 'mTCP 讀後筆記'
 date: 2016-08-31 14:39
 comments: true
-categories: 
+categories:
+tags:
+	- mTCP
+	- Network
+	- System
 ---
 之前在網路上看到了一篇 paper
 [mTCP: A Highly Scalable User-level TCP Stack for Multicore Systems](http://www.ndsl.kaist.edu/~kyoungsoo/papers/mtcp.pdf)
