--- a/source/_posts/2017-03-01-leetcode-314.md
+++ b/source/_posts/2017-03-01-leetcode-314.md
@@ -3,7 +3,9 @@ layout: post
 title: 'LeetCode - 314'
 date: 2017-03-01 05:04
 comments: true
-categories: 
+categories:
+tags:
+	- coding
 ---
 314 Binary Tree Vertical Order Traversal
 ----------------------------------------
