--- a/source/_posts/2014-01-06-mongodb.md
+++ b/source/_posts/2014-01-06-mongodb.md
@@ -3,7 +3,10 @@ layout: post
 title: 'MongoDB'
 date: 2014-01-06 08:32
 comments: true
-categories: 
+categories:
+tags:
+	- System
+	- Database
 ---
 最近在使用 **MongoDb**這套 nosql的DB,簡單紀錄一下過程
 
