--- a/source/_posts/2016-11-02-1069385.md
+++ b/source/_posts/2016-11-02-1069385.md
@@ -3,7 +3,10 @@ layout: post
 title: 'Build Mozilla NSS on windows'
 date: 2016-11-02 13:21
 comments: true
-categories: 
+categories:
+tags:
+	- NSS
+	- Windows
 ---
    最近因為在處理 firefox 的憑證問題，所以要藉由 mozilla 自己的 **certutil.exe**來進行憑證的操作，
 由於Mozilla現在已經不在官網提供執行檔，必須要自己手動下載來Build，因此就到官網來查詢安裝步驟了
