fix wrong syntax
Signed-off-by: hungweic <hungweic@synology.com>

--- a/source/_posts/2014-01-06-mongodb.md
+++ b/source/_posts/2014-01-06-mongodb.md
@@ -7,15 +7,16 @@ categories:
 tags:
 	- System
 	- Database
+	- Python
 ---
 最近在使用 **MongoDb**這套 nosql的DB,簡單紀錄一下過程
 
-###Install###
+### Install
 Refet to [MongoDB Installation](http://docs.mongodb.org/manual/installation/)
 
 <!--more-->
 
-###Manipulate###
+### Manipulate
 在 **MongoDB**中
 
 ![mongodb.png](http://user-image.logdown.io/user/415/blog/415/post/174500/nOcR7hCKTCyrysDk3xgh_mongodb.png)
@@ -27,7 +28,7 @@ Refet to [MongoDB Installation](http://docs.mongodb.org/manual/installation/)
 在操作 **collection**的時候，不需要事先定義每個 **document**的欄位以及屬性，每個 **documents**的欄位數量可以不同，並且可以共存於同一張 **collection**之中。
 
 
-####Mongob Command Line####
+#### Mongob Command Line
 
 **DB**
 - show dbs : 顯示目前有哪些db
@@ -43,16 +44,16 @@ Refet to [MongoDB Installation](http://docs.mongodb.org/manual/installation/)
   
 More refer to [MongoDB Shell](http://docs.mongodb.org/manual/reference/method/)  	
 
-####Use python####
+#### Use python
 
 目前是用 **PyMongo**這個第三方套件
 
 **Install**
 - pip install pymongo
-- Refer to [http://api.mongodb.org/python/current/tutorial.html](Pymongo Installation)
+- Refer to [Pymongo Installation](http://api.mongodb.org/python/current/tutorial.html)
 
 **Connection**
 - client = MongoClient('localhost', 27017) : 與mongodb server連線
 
 **Manipulate**
-- Refer to [http://api.mongodb.org/python/current/tutorial.html](Pymongo Tutorial)
+- Refer to [Pymongo Tutorial](http://api.mongodb.org/python/current/tutorial.html)
